[package]
name = "barter-template"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
derive_more = {version = "1.0.0", features = ["full"]}
dotenvy = "0.15.7"
envy = "0.4.2"
ethcontract = { version = "0.25.7", default-features = false }
ethcontract-derive-fork = "=0.25.6"
num = "0.4.0"
num-derive = "0.4.0"
num-traits = "0.2.16"
primitive-types = {version = "0.12.2", features = ["serde", "fp-conversion"]}
reqwest = {version = "0.12.5", features = ["json"]}
rustc-hex = "*"
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.138"
serde_path_to_error = "0.1.16"
serde_repr = "0.1.16"
serde_with = "3.9.0"
sha3 = "0.10.6"
smallvec = "1.14.0"
smol_str = { version = "0.2.0", features = ["serde"] }
thiserror = "2.0.11"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
uint = "0.9.5"
web3 = { version = "0.19.0", default-features = false, features = ["signing", "http-rustls-tls"] }