[package]
name = "barter-template"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.23", features = [ "sol-types", "json" ] }
alloy-chains = { version = "0.2.2" }
alloy-primitives = { version = "1.0.23", features = ["serde"]}
arrayvec = "0.7.6"
derive_more = {version = "1.0.0", features = ["full"]}
dotenvy = "0.15.7"
envy = "0.4.2"
num = "0.4.0"
num-derive = "0.4.0"
num-traits = "0.2.16"
reqwest = {version = "0.12.5", features = ["json"]}
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.138"
serde_path_to_error = "0.1.16"
serde_repr = "0.1.16"
serde_with = "3.9.0"
smol_str = { version = "0.2.0", features = ["serde"] }
thiserror = "2.0.11"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
paste = "1.0.15"
futures = "0.3.30"